# 3SA-spatio-semantic-synergy-attack

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
data/sample_10/: prompts.csv  sample_meta.json
data/sample_50/: panel_samples.txt  panel_samples_39.txt  prompts.csv  sample_meta.json
docs/: LVLM 研究方向实验设计.md  SAGA-MPC 项目代码生成指令.md  STAGE1_GUIDE.md  _多模态模型对抗鲁棒性对比 .md
results/stage1_dilution_analysis/: dilution_analysis.csv  dilution_summary.json
results/stage1_real_sample50/: calibration_summary.json  soft_correlations.csv  threshold_sweep.csv
scripts/: batch_stage1.py  plot_attention_panel.py  plot_attention_panel_sampled.py  prompt_templates.py  run_stage1.sh  sample_dataset.py  stage1_calibration.py  stage1_dilution_analysis.py  stage1_iou.py  stage2_attack.py  stage3_pareto.py  stage4_defense_eval.py  test_soft_mask.py
src/threesa/: __init__.py  config.py
src/threesa/analysis/: __init__.py  pareto.py
src/threesa/attacks/: __init__.py  pcgrad.py  three_sa.py
src/threesa/data/: __init__.py  dataset.py
src/threesa/defenses/: __init__.py  pipeline.py
src/threesa/models/: __init__.py  attention.py  base.py  mock.py  real_surrogates.py
